Error while live editing UI scripts #65393

Closed
opened 2019-06-01 13:42:52 +02:00 by Yevgeny Makarov · 8 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-29 18:17, hash: fee600f479

Short description of error
Some default UI scripts (space_view3d.py) produce errors when trying to run them.

Exact steps for others to reproduce the error

  • right-click the 3D View header > Edit Source
  • in the Text Editor (without any changes) click Run Script
  • "Python script failed..."
**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-29 18:17, hash: `fee600f479` **Short description of error** Some default UI scripts (space_view3d.py) produce errors when trying to run them. **Exact steps for others to reproduce the error** - right-click the 3D View header > Edit Source - in the Text Editor (without any changes) click Run Script - "Python script failed..."
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm

Added subscribers: @ideasman42, @matc

Added subscribers: @ideasman42, @matc

Looks like there is a problem with importing relative files. Looks like this is normal for python.

Prefixing the imports with bl_ui kind of works, same for using __package__ = "bl_ui", but causes the panel class to complain about parent classes:

RuntimeError: Error: Registering panel class: parent 'VIEW3D_PT_view3d_properties' for 'VIEW3D_PT_view3d_lock' not found

The classes are registered in the correct order.

    VIEW3D_PT_view3d_properties,
    VIEW3D_PT_view3d_lock,

@ideasman42 Do you know why it would fail to find the parent classes?

Looks like there is a problem with importing relative files. Looks like this is normal for python. Prefixing the imports with `bl_ui` kind of works, same for using `__package__ = "bl_ui"`, but causes the panel class to complain about parent classes: `RuntimeError: Error: Registering panel class: parent 'VIEW3D_PT_view3d_properties' for 'VIEW3D_PT_view3d_lock' not found` The classes are registered in the correct order. ``` VIEW3D_PT_view3d_properties, VIEW3D_PT_view3d_lock, ``` @ideasman42 Do you know why it would fail to find the parent classes?
Campbell Barton was assigned by matc 2019-06-10 21:46:21 +02:00

This issue was referenced by 83da21ca4e

This issue was referenced by 83da21ca4e6cc969e48742b1b1783882192a66b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

There's still an error in the space_node.py file.

There's still an error in the `space_node.py` file.
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65393
No description provided.