Fix panel-type re-registration with parents

The order of panel types changes when re-registering existing types.
Fixes an error exposed by T65393.